--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@500;800&family=Roboto+Slab:wght@300;402&display=swap');
 
 * {
   box-sizing: border-box;
