--- a/src/routes/RegistrationRoute/RegistrationRoute.css
+++ b/src/routes/RegistrationRoute/RegistrationRoute.css
@@ -1,27 +1,85 @@
 .register{
     display: grid;
     justify-content: center;
-    border-style: solid;
-    border-color: #D62618;
-    border-width: 1px;
+    /* border-style: solid; */
+    /* border-color: #D62618; */
+    /* border-width: 1px; */
     width: 90%;
     justify-items: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: 40px;
+    box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.171) ;
+    border-bottom: thin;
+    border-radius: 5px;
+    padding: 15px;
 }
+
+h2{
+    font-size: 28px;
+    margin: 0px;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+
+  input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+
+  .signupButton{
+    background-color: #009C46;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .signupButton:hover {
+    opacity: 0.8;
+  }
+
 
 
 @media screen and (min-width: 600px) {
     .register{
         display: grid;
         justify-content: center;
-        border-style: solid;
-        border-width: 1px;
         width: 40%;
         justify-items: center;
         margin-left: auto;
         margin-right: auto;
         margin-top: 40px;
+        padding-left: 60px;
+        padding-right: 60px;
+        padding: 30px;
+    }
+
+    input[type=text], input[type=password] {
+        width: 100%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: inline-block;
+        border: none;
+        background: #f1f1f1;
+      }
+
+      input[type=text]:focus, input[type=password]:focus {
+        background-color: #ddd;
+        outline: none;
+      }
+
+      h2{
+        font-size: 28px;
+        margin: 16px;
     }
   }
